--- a/shared-ui/src/main/res/values/colors.xml
+++ b/shared-ui/src/main/res/values/colors.xml
@@ -37,6 +37,7 @@
     <color name="light_red">#FC4444</color>
     <color name="transparent">@android:color/transparent</color>
     <color name="wa_light_gray">#F2F2F2</color>
+    <color name="wa_dark_gray">#929292</color>
     <color name="wa_dark_green">#3C6E72</color>
     <color name="wa_calc_gray">#A4A2A2</color>
     <color name="wa_light_green">#E6F4F3</color>
